The list of ports in configuration path shall be protected by locks, epoch shall be used only for fast path.  Thus use LAGG_XLOCK() in lagg_[un]register_vlan.  This fixes sleeping in epoch panic.

PR:		240609
(cherry picked from commit e1074ed6a08033ee571b4bedb3ffe6049a4a7361)